feat: add mongodb client and more API description
